modificação no título do projeto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chromatica - Sobre</title>
+    <title>Chromatica - Lady Gaga</title>
 
     <link href="//db.onlinewebfonts.com/c/220eece2861e0a892f3bc87ad8029d0a?family=T-Star+Mono" rel="stylesheet"
         type="text/css" />
